--- a/style.css
+++ b/style.css
@@ -4,52 +4,65 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  text-align: center;
 }
+
 /* Navbar */
 .navbar {
   padding: 10px;
   margin-top: 10px;
   width: 100%;
-  height: 70px;
+  height: 50px;
   background-color: #ffffff;
   display: flex;
   justify-content: center;
   justify-content: space-around;
-  /* border: 2px red solid; */
 }
+
 .logo {
   width: 246.037px;
   height: 29.675px;
   flex-shrink: 0;
 }
+
 .navbarlist ul li {
   padding: 20px;
   display: inline;
   justify-content: center;
   justify-content: space-between;
 }
+
 .navbarlist ul li a {
   color: #000;
 }
+
 .navbarlist ul li a:hover {
   background-color: black;
   color: white;
   border: none;
   border-radius: 5px;
 }
-/* Home Page */
-flex-container {
 
+
+/* Home Page */
+.flex-container {
+  display: block;
+
+  background-image: url(./homeimage.png);
+  background-size: cover;
+  width: 100%;
   height: 578.101px;
-  display: flex;
-  
-.text{
-    float: left;
-    width: 50%;
-    text-align: center;
+  flex-shrink: 0;
 }
-.photo{
-    float: right;
-    width: 50%;
+
+.text {
+  width: 40%;
+  color: #fff;
+  font-family: Raleway;
+  font-size: 33px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 43px;
+
+  padding-top: 100px;
+  padding-left: 100px;
 }
