--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  list-style: none;
   text-decoration: none;
 }
 
@@ -29,6 +28,7 @@
   display: inline;
   justify-content: center;
   justify-content: space-between;
+  list-style: none;
 }
 
 .navbarlist ul li a {
@@ -41,7 +41,6 @@
   border: none;
   border-radius: 5px;
 }
-
 
 /* Home Page */
 .flex-container {
@@ -65,4 +64,96 @@
 
   padding-top: 100px;
   padding-left: 100px;
+}
+
+/* Next page */
+.container {
+  height: 200px;
+  text-align: center;
+  margin-top: 50px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.text1 {
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+p {
+  margin-top: 20px;
+  color: #000;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  /* 150% */
+}
+
+button {
+  margin-top: 20px;
+  color: #040363;
+  text-align: justify;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 26px;
+  border: none;
+}
+
+.photo {
+  justify-content: center;
+  width: 50%;
+}
+
+/* Next page */
+.second {
+  width: 100%;
+  height: 485px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text2 {
+  width: 50%;
+}
+
+.text h1 {
+  color: #383838;
+  font-family: Raleway;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px;
+  /* 133.333% */
+}
+
+.text2 ul {
+  margin-top: 20px;
+  color: #383838;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 150% */
+}
+.text2 button {
+  color: #040363;
+  text-align: justify;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 26px; /* 144.444% */
+}
+
+.image img {
+  width: 50%;
+  height: 200px;
 }
