--- a/style.css
+++ b/style.css
@@ -116,12 +116,16 @@ button {
   width: 100%;
   height: 485px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .text2 {
   width: 50%;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 0;
 }
 
 .text h1 {
@@ -150,10 +154,19 @@ button {
   font-size: 18px;
   font-style: normal;
   font-weight: 600;
-  line-height: 26px; /* 144.444% */
+  line-height: 26px; 
+}
+.image{
+  width: 50%;
+  height:300px;
+
 }
 
 .image img {
-  width: 50%;
-  height: 200px;
-}
+
+  width: 400px;
+  height: 250px;
+  flex-shrink: 0;
+  position:absolute;
+  left: 150px; 
+} 
