--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
 .container {
   height: 200px;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 70px;
   display: flex;
   width: 100%;
   justify-content: center;
@@ -113,11 +113,10 @@ button {
 
 /* Next page */
 .second {
+  margin-top: 70px;
   width: 100%;
   height: 485px;
   display: flex;
-  /* justify-content: center;
-  align-items: center; */
 }
 
 .text2 {
@@ -154,19 +153,119 @@ button {
   font-size: 18px;
   font-style: normal;
   font-weight: 600;
-  line-height: 26px; 
+  line-height: 26px;
 }
-.image{
+.image {
   width: 50%;
-  height:300px;
-
+  height: 300px;
 }
 
 .image img {
-
-  width: 400px;
-  height: 250px;
+  width: 500px;
+  height: 300px;
   flex-shrink: 0;
-  position:absolute;
-  left: 150px; 
-} 
+  position: absolute;
+  left: 150px;
+}
+/* Next page */
+.div2 {
+  height: 100px;
+  text-align: center;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.class1 {
+  width: 50%;
+  justify-content: center;
+}
+.class1 h2 {
+  font-family: Raleway;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+}
+.class1 p {
+  color: #000;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.class1 button {
+  color: #040363;
+  text-align: justify;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+
+}
+.class2 {
+
+  width: 50%;
+  height: 488px;
+  flex-shrink: 0;
+}
+.class2 img{
+  width: 500px;
+  height: 300px;
+}
+/* Next page */
+.div3 {
+  margin-top: 100px;
+  height: 100px;
+  text-align: center;
+
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.class3{
+  width: 50%;
+  height: 488px;
+  flex-shrink: 0;
+}
+.class3 img{
+  width: 500px;
+  height: 300px;
+}
+.class4 {
+  padding-top: 50px;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+}
+.class4 h2 {
+  font-family: Raleway;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+}
+.class4 p {
+  color: #000;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.class4 button {
+  color: #040363;
+  text-align: justify;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+
+}
+
+
+
+
+/* Footer */
+.footer{
+  margin-top: 200px;
+}
